--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -5230,7 +5230,7 @@ $x_1 = (r_1)^2 \jmod{n}$ and $x_2 = (r_2)^2 \jmod{n}$.  Protocol is:
 \item Victor confirms that  $(r_1)^2 = x_1 \jmod{m}$.
 \end{enumerate}
 Without knowing $s$, Peggy succeeds with probability ${\frac 1 2}$ but always succeeds if she knows $s$.  Repeating this
-$m$ times, Victor knows that Peggy knows $s$ with probability $1-({\frac 1 2})^2$.
+$m$ times, Victor knows that Peggy knows $s$ with probability $1-({\frac 1 2})^m$.
 \\
 \\
 {\bf More efficient proof of secret knowledge protocol (FFS):} 
