--- a/groups/gtMisc.tex
+++ b/groups/gtMisc.tex
@@ -21,12 +21,13 @@ In $S_5$, $u_1= (12)$, $u_2= (12)(34)$.
 \\
 \\
 2.  After conjugation, we can assume, $u_1 \in C_2, u_2 \in C_1$.
-Let $x_1, x_2$ be involutions.  Let $s_i$ be the number of ordered pairs
-$u \in x_1^G, v \in x_2^G$ and $x_i \in \langle uv \rangle
-$.  $|G|= s_1|C_G(x_2)| + s_2 |C_G(x_1)|$.
+Let $x_1, x_2$ be involutions.  Let $S_i$ be the number of ordered pairs
+$u \in x_1^G, v \in x_2^G$ and $x_i \in \langle uv \rangle$.
+$|G|= s_1|C_G(x_2)| + s_2 |C_G(x_1)|$.
 (In the real $G$, $|ccl_G(u_1)| = 10$ and $|ccl_G(u_2)|= 15$.)
 Note that if 
-$x \in x_1^G$ and $y \in x_2^G$ and $|xy|$ is even, $x,y \in C((xy)^{\frac {|xy|} 2})$.
+$x \in x_1^G$ and $y \in x_2^G$, $|xy|$ is even (otherwise they would be
+conjugate), $x,y \in C((xy)^{\frac {|xy|} 2})$.
 \\
 \\
 3. 
@@ -37,24 +38,20 @@ $u_2= (12)(34)$.
 $ccl_{C_2}((14)(23))= \{ (14)(23), (13)(24) \}$,
 $ccl_{C_2}((12))= \{ (12), (34) \}$,
 $ccl_{C_2}((12)(34))= \{ (12)(34) \}$.  If $x \ne u_2$, $ x \sim x u_2$.
-$G$ contains a non-cyclic group $V$ of order $4$
-and all involutions of $V$ are conjugate to $u_2$ in $G$.
+$G$ contains a non-cyclic group, $V$, of order $4$.
 $V= ccl_{C_2}((14)(23)) \cup \{ 1 \} \cup ccl_{C_2}((12)(34))$.
-Since $G$ has two classes of involutions, $s_2 = 0$ or $s_2 = 4$.
+Since $G$ has two classes of involutions, $s_2 = 0$ or $s_2 = 4$ and all the
+involutions in $V$ are $G$-conjugate.
 \\
 \\
 4.
 $C_1$ has three conjugacy classes of involutions.  $x \ne u_1 \rightarrow x \nsim x u_1$.
 $ \langle u_1 \rangle \times S_3$. 
 $ccl_{C_1}((12))= \{ (12) \}$,
-$ccl_{C_1}((12)(34))= \{ 
-(12)(34), 
-(12)(35), 
-(12)(45), 
-\}$, $ccl_{C_1}((34))= \{ (34) , (35), (45) \}$.  If $x \ne u_2$, $ x \nsim x u_2$.
-Since $G$ has two classes of involutions and for any $u \ne x \in Inv(C_1 )$,
-exactly one of $x$  or $xu$ is
-conjugate to $u$, $s_1 = 9$.
+$ccl_{C_1}((12)(34))= \{ (12)(34), (12)(35), (12)(45), \}$,
+$ccl_{C_1}((34))= \{ (34) , (35), (45) \}$.  If $x \ne u_1$, $ x \nsim x u_1$.
+Since $G$ has two classes of involutions and for any $u_1 \ne x \in Inv(C_1 )$,
+exactly one of $x$  or $xu_1$ is conjugate to $u_1$, $s_1 = 9$.
 \\
 \\
 5.
@@ -66,7 +63,7 @@ $P \in S_3(C_1)$, $P \subseteq Q \in S_3(G)$.
 $|Q|=9$ and $ \langle C_1 , Q \rangle \subseteq N(P)$,
 $36 \mid |N(P)|$.
 $\exists H: C(P) \subset H: |H|=36$.  $u_1 \in H$ and $u_2$ is a square in $H$.
-$H \lhd G$ and $H$ contains all involutions hence $C_2 \cap H$ contains all involutions of
+$H \lhd G$ and $H$ contains all involutions in $G$ hence $C_2 \cap H$ contains all involutions of
 $C_2$ but $|C_2 \cap H|=4$ and there are $5$ involutions in $C_2$.
 \\
 \\
