--- a/groups/gtMisc.tex
+++ b/groups/gtMisc.tex
@@ -10,7 +10,7 @@ $|G| = n_i n_j \sum_k d_{ijk} $. (Proved earlier)
 \\
 \\
 {\bf Sample characterization of $S_5$:}
-If $G$ is a finite group with two conjugacy classes of involutions having
+If $G$ is a finite group with two conjugacy classes of involutions ($ccl_1, ccl_2)$ having
 centralizers, $C_1= C(u_1) = \langle u_1 \rangle \times S_3$ and
 $C_2= C(u_2) = D_8$ then $G = S_5$.
 \\
@@ -21,12 +21,11 @@ In $S_5$, $u_1= (12)$, $u_2= (12)(34)$.
 \\
 \\
 2.  After conjugation, we can assume, $u_1 \in C_2, u_2 \in C_1$.
-Let $x_1, x_2$ be involutions.  Let $S_i$ be the number of ordered pairs
-$u \in x_1^G, v \in x_2^G$ and $x_i \in \langle uv \rangle$.
+Let $x_1 \in ccl_1, x_2 \in ccl_2$ be involutions.  Let $S_i= \{ (u, v):
+u \in x_1^G, v \in x_2^G, x_i \in \langle u, v \rangle \}$. Put $s_i = |S_i|$.
 $|G|= s_1|C_G(x_2)| + s_2 |C_G(x_1)|$.
 (In the real $G$, $|ccl_G(u_1)| = 10$ and $|ccl_G(u_2)|= 15$.)
-Note that if 
-$x \in x_1^G$ and $y \in x_2^G$, $|xy|$ is even (otherwise they would be
+Note that if $x \in x_1^G$ and $y \in x_2^G$, $|xy|$ is even (otherwise they would be
 conjugate), $x,y \in C((xy)^{\frac {|xy|} 2})$.
 \\
 \\
