--- a/science/math1.tex
+++ b/science/math1.tex
@@ -784,7 +784,7 @@ if $m=0 (4)$.
 {\bf Difference calculus:} Let $\langle a_0, a_1, a_2, \ldots \rangle$ be a sequence.  Define $\Delta a_k = a_{k+1} - a_k$.
 $\Delta^2 a_k = \Delta (a_{k+1} - a_k) = a_{k+2} - 2a_{k+1} + a_k$ and in general
 $\Delta^n a_k = \sum_{i=0}^n {n \choose i} (-1)^i a_{k+i}$.  It is easy to show that $(\Delta + 1) a_k = a_{k+1}$ and in
-fact, $(\Delta + 1)^n a_k = a_{k+n}$.  
+fact, $(\Delta + 1)^n a_0 = a_{n}$.  
 Put $E= \Delta + 1$, then $E^n a_0 = a_n$ and $E^n= \sum_{i=0}^n {n \choose i} \Delta^{i}$. Now if $a_k$ is given by
 a polynomial, $P(k)$ and $deg(P) = d$, $\Delta^m a_k = 0$ for $m > d$.  Consider the sequence $a_k= k^3$.
 $a_0 = 0$, $\Delta a_0 = 1$, $\Delta^2 a_0 = 6$, $\Delta^3 a_0 = 6$, $\Delta^m a_0 = 0, m > 3$.
