--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -425,16 +425,17 @@ and let $G$  have minimal order subject to this. Then $|G|=1 \jmod{p}$.
 We may assume that $G$ is not solvable. Hence we may choose an 
 odd prime divisor $q$ of $|G|$.
 Then $G$ has an $\alpha$-invariant Sylow $q$-subgroup $Q$, and $N(Z(J(Q)))$
-is also $\alpha$-invariant. 
+is also $\alpha$-invariant.
+
 If $Z(J(Q)) \lhd G$ then $\alpha$ induces a fixed-point free automorphism on 
-$G/Z(J(Q))$ so, by induction, that $G/Z(J(Q))$ is nilpotent,
-and $G$  is solvable, contrary to assumption.  Hence $N(Z(J(Q)))$
-is a proper subgroup of $G$, so is nilpotent by the minimality of $G$.
+$G/Z(J(Q))$ so, by induction, $G/Z(J(Q))$ is nilpotent,
+and $G$ is solvable, contrary to assumption.  Hence $N(Z(J(Q)))$
+is a proper subgroup of $G$, which is nilpotent by the minimality of $G$.
 The Thompson's normal $q$-complement theorem shows that $G$ has a normal $q$-complement too.
 Since $q$ was an arbitrary odd prime divisor of $|G|$, $G$ has a normal Sylow 2-subgroup $U$ and 
 $G/U$ is nilpotent by minimality of $G$. So $G$ is again solvable, contrary to assumption.
 \\
-This now reduces to proving the result in the case that $G$ is solvable which .
+This now reduces to proving the result in the case that $G$ is solvable which
 reduces to representation theory. 
 Further reducing to the case that $Q=F(G)$ is a minimal normal subgroup of $G$. This means $Q$ is 
 an elementary Abelian $q$-group for some prime $q$. 
