--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -1,8 +1,8 @@
 \chapter{Coprime action and $p$-constraint}
 \section {Basic Results}
 {\bf Definition 1:} A group of automorphisms $A$ of a group $P$ stabilizes a chain
-$1=P_n \subseteq P_{n-1} \subseteq \ldots \subseteq P_0 = P$ if
-$[A,P_i] \subseteq P_{i+1}$.  
+$1=P_0 \subseteq P_{1} \subseteq \ldots \subseteq P_n = P$ if
+$[A,P_{i+1}] \subseteq P_{i}$.  
 \\
 \\
 {\bf Theorem 1:} If $P$ is a $\pi$ group with chain stabilized by
@@ -11,7 +11,7 @@ $A$ then $A$ is a $\pi$ group.
 \emph{Proof:} Suppose $a \in A$ is a $\pi'$ automorphism.  Proof is by induction on the
 length of the chain and so we can assume $[a,P_1]=1$.
 $x^a =xy, y \in P_1$.  So, $x^{a^{|a|}}= x y^{|a|}=x$, so $y=1$ and
-$[a,P]=1$.
+$[a,P_2]=1$.
 \end{quote}
 {\bf Theorem 2:} If $A$ is a $\pi'$ group of automorphisms on a $\pi$ group $P$ with
 $[P,A,A]=1$ then $[P,A]=1$.
