--- a/groups/gtMisc.tex
+++ b/groups/gtMisc.tex
@@ -5,7 +5,7 @@ $Pr[ \langle x,y \rangle =S_n]= {\frac 3 4}$.
 \\
 \\
 {\bf Thompson Order Formula:} Suppose $G$ has $s\geq 2$ classes of involutions, $C_1, \ldots , C_s$.
-Put $d_{ijk} = |\{ (u,v): u \in C_i, v \in C_k, w=(uv)^m, w \in C_k \}|$.  Put $n_i = {\frac {|G|} {|C_i|}}$ then
+Put $d_{ijk} = |\{ (u,v): u \in C_i, v \in C_j, w=(uv)^m, w \in C_k \}|$.  Put $n_i = {\frac {|G|} {|C_i|}}$ then
 $|G| = n_i n_j \sum_k d_{ijk} $. (Proved earlier)
 \\
 \\
