--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -152,9 +152,9 @@ Suppose $\langle Pg_i x, \ldots , P g_i x^{n_i - 1} \rangle$ is an orbit of $x$ 
 ${g_i}^{-1} x^{n_i} g_i \in P$, and $x^{n_i} \in P$.  
 We can find a complete set of coset representatives of $P$ in $G$ consisting of such orbits with $g_i \in G, i = 1,2, \ldots, h$.
 For each $i$, $x^{n_i} = {g_i}^{-1} x^{n_i} g_i \jmod{Foc_G(P)}$.  So 
-$V_{G \rightarrow P}(x) \jmod{Foc_G(P)} = \prod_{i=1}^h {g_i}^{-1} x^{n_i} g_i \jmod{Foc_G(P)} = x^{|G:P|} \jmod{Foc_G(H)}$
+$V_{G \rightarrow P}(x) \jmod{Foc_G(P)} = \prod_{i=1}^h {g_i}^{-1} x^{n_i} g_i \jmod{Foc_G(P)} = x^{|G:P|} \jmod{Foc_G(P)}$
 and  $x^{|G:P|} \in Foc_G(P)$.  Since $P' \subseteq Foc_G(P) \subseteq P$ and $(|x|, |G:P|) =1$, $\exists k_1, k_2: k_1|G:P| + k_2|x| = 1$
-so $x = x^{|G:P| k_1} x^{|x| k_2} \in Foc_G(H)$ and all the groups are the same.
+so $x = x^{|G:P| k_1} x^{|x| k_2} \in Foc_G(P)$.
 \end{quote}
 {\bf Theorem 8:}  
 If $P \in S_p(G)$ then $ker(V_{G \rightarrow P})= A^p(G)$.
