--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -66,7 +66,7 @@ Let $T$ be a right transversal for $Z={\mathbb Z}(G)$ in $G$, then every commuta
 is of the form $[s,t], s,t \in T$.  So if $|G:Z|$ is finite, there are only finitely 
 many commutators.
 \begin{quote}
-\emph{Proof:}    The second statement follows from the first since $|T|= |G:{\mathbb Z}(G)$.
+\emph{Proof:}    The second statement follows from the first since $|T|= |G:{\mathbb Z}(G)|$.
 If $g \in G, g= xs, x \in {\mathbb Z}(G), t \in T$.  So it suffices to show 
 $[xs,yt]=[s,t]$  with $x, y \in {\mathbb Z}(G)$ and $s, t \in T$.  So
 $[xs,yt]= [x,yt]^s [s,yt]= [s,yt]$.  Also, 
