--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -210,7 +210,8 @@ Same as the earlier proof about $N_G(P)$ controlling fusion on $C_G(P)$.
 {\bf Definition 4:}
 $Z$ is \emph {weakly closed} in $P$ with respect to $G$ if $Z^g \subseteq P \rightarrow Z^G=Z$.
 The \emph {weak closure} of $Z$ in $P$ with respect to $G$ is 
-$wcl_G(Z, P)= \langle Z^g| Z^g \subseteq P \rangle$.
+$wcl_G(Z, P)= \langle Z^g| Z^g \subseteq P \rangle$.  $G'(\pi)$ is the inverse image of
+$O_{\pi'}(G/G')$.
 \\
 \\
 {\bf Theorem 12:}
