--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -137,8 +137,8 @@ theorem shows, for example, that $|M(A_5)|=2$
 \\
 \\
 {\bf Definition 3:} $A^p(G)$ is the smallest normal subgroup of $G$ such that
-$G/A^p(G)$ is an abelian $p$-group.  If $P$ is a Hall $\pi$ subgroup of $G$,
-we use $G(\pi)$ to denote the inverse image of $O_{\pi}(G/G')$.
+$G/A^p(G)$ is an abelian $p$-group. Let $G'(\pi)$ denote the inverse image of
+$O_{\pi'}(G/G')$.
 \\
 \\
 {\bf Focal Subgroup Theorem:}  
@@ -183,7 +183,7 @@ Sylow subgroups of $C_G(c_2)$ by Sylow, $\exists h \in C_G(c_2): P^{gh}=P$ and
 hence $gh \in N_G(P)$.  $c_1^{gh}= c_2^h= c_2$ and so $c_1$ and $c_2$ fuse in $N_G(P)$.
 \end{quote}
 {\bf Theorem 11:}  Let  $P$ be a Hall subgroup of $G$ then $Foc_G(P) = P \cap G(\pi)=P \cap G'$ and
-$G/Foc_G(P) \cong G/G'(\pi)$, $ker(V_{G \rightarrow P}) = G(\pi)$ and
+$G/Foc_G(P) \cong G/G'(\pi)$, $ker(V_{G \rightarrow P}) = G'(\pi)$ and
 $P/P' = {\overline P} = {\overline {Foc_G(P)}} \times Im(V_{G \rightarrow P})$.
 \begin{quote}
 \emph{Proof:}  $(|P|,|G:P|) = 1$.  $V_{G \rightarrow P} {\overline {Foc_G(P)}} = \langle {\overline x} \rangle {\overline {Foc_G(P)}}$ as in the
